@@ -3,6 +3,7 @@ Change log for Android SDK Tools.
 Revision 7:
 - Support for Ant rules provided by the Tools components (override the one in
   the platform component)
+- Headless SDK update. See 'android -h update sdk' for more info.
 
 Revision 6:
 - Support for library project to share code/resources among projects
